# SnakeGame

./: CMakeLists.txt  README.md  main.cpp
headers/: camera.hpp  control.hpp  fruit.hpp  gl_objects.hpp  shaders.hpp  snake.hpp  textures.hpp
headers/glad/: glad.h
libraries/Snake/: CMakeLists.txt  fruit.cxx  snake.cxx
libraries/camera/: CMakeLists.txt  camera.cxx
libraries/control/: CMakeLists.txt  control.cpp  control.cxx  gl_objects.cxx  shader.cxx  textures.cpp
libraries/glad/: CMakeLists.txt  glad.c
libraries/glfw-3.4/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
libraries/glfw-3.4/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  update_mappings.vcxproj  update_mappings.vcxproj.filters
libraries/stbimage/: CMakeLists.txt  stbimplem.cxx
shader/: fragment.glsl  vertex.glsl
